Beginning work, integrated Bootstrap.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Alexander Seaver</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
+
+<div class="jumbotron text-center">
+  <h1>Alexander Seaver</h1>
+  <small>BA in Molecular Biology from Kenyon College, 2017</small>
+</div>
+
+<div class="container">
+	<div class="row">
+		<div class="col-sm-3">
+			<img src="AlexanderSeaverPortrait.jpg" alt="Portrait" width="150" height="150">
+		</div>
+		<div class="col-sm-6">
+			<h3>Column 2</h3>
+		</div>
+		<div class="col-sm-3">
+			<h3>Column 3</h3>
+		</div>
+	</div>
+</div>
+
+</body>
+</html>
