--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Alexander Seaver</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -18,7 +19,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-sm-3">
-			<img src="AlexanderSeaverPortrait.jpg" alt="Portrait" width="150" height="150">
+			<img src="AlexanderSeaverPortrait.jpg" alt="Portrait" width="100" height="100">
 		</div>
 		<div class="col-sm-6">
 			<h3>Column 2</h3>
