--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <div class="container">
 	<div class="row">
 		<div class="col-sm-3">
-			<img src="AlexanderSeaverPortrait.jpg" alt="Portrait" width="100" height="100">
+			<img src="AlexanderSeaverPortrait.jpg" alt="Portrait" width="200" height="200">
 		</div>
 		<div class="col-sm-6">
-			<h3>Column 2</h3>
+			<embed src="AlexanderSeaverResume.pdf" width="500" height="500" type="application/pdf">
 		</div>
 		<div class="col-sm-3">
 			<h3>Column 3</h3>
